<resources>
    <string name="app_name">Oasis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Заголовок</string>
    <string name="nav_header_subtitle">Подзаголовок</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main">Главный</string>
    <string name="mortgage">Ипотечный калькулятор</string>
    <string name="news">Новости</string>
    <string name="calculation_mode">Режим рассчета</string>
    <string name="mode_default">Режим 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Возраст</string>
    <string name="period">Срок</string>
    <string name="count2">4800000 Р</string>
    <string name="count1">4800000 Р</string>
    <string name="initial_payment">Первоначальный взнос</string>
    <string name="project_coast">Стоимость объекта</string>
    <string name="submit_an_application">Подать заявку</string>
    <string name="show_all">Показать все</string>
    <string name="selected_programs">Подобранные программы</string>
    <string name="title_activity_program">ProgrammActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account">Личный кабинет</string>
</resources>