<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="ru.eva.oasis.fragment.main.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_mortgage"
        android:name="ru.eva.oasis.fragment.mortgage.MortgageFragment"
        android:label="@string/mortgage"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_news"
        android:name="ru.eva.oasis.fragment.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_account"
        android:name="ru.eva.oasis.fragment.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>